--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
+  <img src=https://s3.amazonaws.com/ironboard-learn/lion.jpg>
+
 
   <!-- Your code here -->
 
