Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <img src=https://s3.amazonaws.com/ironboard-learn/lion.jpg>
-
-
+  <img alt="Murder the gods and topple their thrones" src=https://s3.amazonaws.com/ironboard-learn/lion.jpg>
+  <img alt="Murder the gods and topple their thrones" src=https://s3.amazonaws.com/ironboard-learn/lion.jpg title="Lions, Inc">
+ 
   <!-- Your code here -->
 
 </body>
